# documentation-toolkit

./: .env.example  .gitignore  .prebid_Prebid.js_master_modules_checkpoint.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  fetch_missing_adapters.py  prebid.github.io_modules_version_master.txt  prebid.js_alias_mappings_9.0.0.txt  prebid.js_alias_mappings_9.51.0_.txt  prebid.js_modules_version_9.0.0.txt  prebid.js_modules_version_9.51.0.txt  prebid.js_modules_version_extract-metadata.txt  prebid.server.go_alias_mappings_3.19.0.txt  prebid.server.go_modules_version_3.19.0.txt  prebid.server.go_modules_version_v3.8.0.txt  prebid.server.java_modules_version_3.27.0.txt  prebid_js_full_historical_data.txt  prebid_server_java_aliases_3.27.0.txt  pyproject.toml  test_checkpoint.py  test_git_tree.py  test_module_history.py  test_pagination.py
.github/workflows/: test.yml
cache/history/: prebid_Prebid.js_history.json
cache/module_history/: prebid_Prebid.js_history.json
cache/versions/: README.md  prebid_Prebid.js.json  prebid_prebid-server-java.json  prebid_prebid-server.json
docs/: checkpoint_manager.md  cli_consistency_analysis.md  cli_implementation_plan.md  module-compare.md  module_compare_improvements_completed.md  module_compare_improvements_plan.md  module_compare_testing_implementation_summary.md  module_compare_testing_strategy.md  output_manager.md
src/: __init__.py
src/alias_mappings/: __init__.py  alias_finder.py  main.py
src/dev_tools/: __init__.py  cleanup.py  cli.py  docs_sync.py  (+1 more)
tests/: __init__.py  conftest.py  test_checkpoint_manager.py  test_github_client.py  test_main.py  test_parser_factory.py
(+124 files in other folders)
